--- a/index.html
+++ b/index.html
@@ -14,6 +14,89 @@
     crossorigin='anonymous' referrerpolicy='no-referrer' />
 </head>
 <body>
+    <header>
+        <nav class="navbar bg-danger navbar-expand-md">
+            <div class="container-fluid">
+              <div class="col-2">
+                  <a class="navbar-brand" href="#">
+                    <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    Bootstrap
+                  </a>
+              </div>
+              <div class="col-8">
+                  <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  </form>
+              </div>
+              <div class="col-2">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                      <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                      <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house"></i></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#"><i class="fa-solid fa-house"></i></a>
+                        </li>
+                        <li class="nav-item dropdown">
+                          <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fa-solid fa-house"></i>
+                          </a>
+                          <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                              <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+              </div>  
+            </div>
+          </nav>
+
+    </header>
+
+    <main>
+        <section class="side_bar">
+
+        </section>
+        <section class="statics">
+
+        </section>
+
+        <section class="main_container">
+            <section class="classi">
+
+            </section>
+
+            <section class="faq">
+
+            </section>
+
+            <section class="todo">
+
+            </section>
+
+            <section class="utenti_attivi">
+
+            </section>
+        </section>
+    </main>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     
 </body>
 </html>
