fix dropdown menu on nav

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                   </form>
               </div>
-              <div class="col-2">
+              <div class="col-2 display_contents">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -49,12 +49,9 @@
                           <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fa-solid fa-house"></i>
                           </a>
-                          <ul class="dropdown-menu">
+                          <ul class="dropdown-menu dropdown-menu-end">
                             <li><a class="dropdown-item" href="#">Action</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                              <hr class="dropdown-divider">
-                            </li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                           </ul>
                         </li>
