add logo on nav

--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
 <body>
     <header>
         <nav class="navbar bg-danger navbar-expand-md">
-            <div class="container-fluid">
+            <div class="container-fluid row">
               <div class="col-2">
                   <a class="navbar-brand" href="#">
-                    <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                    Bootstrap
+                    <img src="./img/logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top w-100">
                   </a>
               </div>
               <div class="col-8">
                   <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control" type="search" placeholder="Search" aria-label="Search">
                   </form>
               </div>
               <div class="col-2 display_contents">
