--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
                           <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house"></i></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#"><i class="fa-solid fa-house"></i></a>
+                            <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house"></i></a>
                         </li>
                         <li class="nav-item dropdown">
                           <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -65,6 +68,28 @@
 
     <main>
         <section class="side_bar">
+            <div class="row">
+                <div class="container">
+                    <div class="col-2 debug d-flex flex-column">
+                        <div class="col-6 d-flex flex-column align-items-center">
+                            <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
+                                <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
+                            </a>
+                            <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
+                                <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
+                            </a>
+                            <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
+                                <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
+                            </a>
+                        </div>
+                        <div class="col-6">
+                            <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
+                                <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </section>
         <section class="statics">
