--- a/index.html
+++ b/index.html
@@ -67,52 +67,32 @@
     </header>
 
     <main>
-        <section class="side_bar">
-            <div class="row">
-                <div class="container">
-                    <div class="col-2 debug d-flex flex-column">
-                        <div class="col-6 d-flex flex-column align-items-center">
-                            <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
-                                <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
-                            </a>
-                            <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
-                                <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
-                            </a>
-                            <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
-                                <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
-                            </a>
-                        </div>
-                        <div class="col-6">
-                            <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
-                                <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
-                            </a>
-                        </div>
-                    </div>
+        <div class="main_container d-flex">
+            <div class="side_bar col-1 d-flex flex-column justify-content-between">
+                <div class="col-12">
+                    <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
+                        <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
+                    </a>
+                    <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
+                        <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
+                    </a>
+                    <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
+                        <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
+                    </a>
+                </div>
+                <div class="col-12">
+                    <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
+                        <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
+                    </a>
                 </div>
             </div>
 
-        </section>
-        <section class="statics">
+            <div class="principal_container col-11">
 
-        </section>
+            </div>
 
-        <section class="main_container">
-            <section class="classi">
 
-            </section>
-
-            <section class="faq">
-
-            </section>
-
-            <section class="todo">
-
-            </section>
-
-            <section class="utenti_attivi">
-
-            </section>
-        </section>
+        </div>
     </main>
 
 
@@ -121,3 +101,23 @@
     
 </body>
 </html>
+
+
+
+
+<!-- <div class="col-6 d-flex flex-column align-items-center">
+    <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
+        <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
+    </a>
+    <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
+        <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
+    </a>
+    <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
+        <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
+    </a>
+</div>
+<div class="col-6">
+    <a class="text-decoration-none text-white d-flex justify-content-center align-items-center py-2">
+        <i class="fa-solid fa-house pe-2"></i><div class="d-none d-lg-block">Home</div>
+    </a>
+</div> -->
