add main structure

--- a/index.html
+++ b/index.html
@@ -88,6 +88,21 @@
             </div>
 
             <div class="principal_container col-11">
+                <div class="container">
+                    <div class="row">
+                        <section class="col-sm-12 bg-black static_section">
+
+                        </section>
+                        <section class="col-lg-8 col-sm-12 bg-danger left_main_section">
+                            <div class="col-12 prossime_classi"></div>
+                            <div class="col-12 faq"></div>
+                        </section>
+                        <section class="col-lg-4 col-sm-12 bg-black right_main_section">
+                            <div class="col-12 todo"></div>
+                            <div class="col-12 graphics"></div>
+                        </section>
+                    </div>
+                </div>
 
             </div>
 
