add buttons margin on statistics section

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
                 <section class="col-12 bg-black statistic_section p-3">
                     <div class="row align-items-start">
-                        <div class="col-sm-12 col-md-4 col-lg-3 order-lg-2 order-md-2">
-                            <div class="d-flex">
+                        <div class="col-sm-12 col-md-4 col-lg-3 order-lg-3 order-md-3">
+                            <div class="d-flex justify-content-md-end justify-content-lg-end">
                                 <div class="row">
                                     <div class="col-12 d-flex align-items-center">
                                         <h5>Nuovo Studente</h5>
@@ -106,7 +106,7 @@
                                         <span type="button" class="" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">#</span>
     
                                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="display: none;">
-                                            <div class="modal-dialog">
+                                            <div class="modal-dialog modal-fullscreen-md-down">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
                                                         <h1 class="modal-title fs-5" id="exampleModalLabel">New message to @getbootstrap</h1>
@@ -156,13 +156,13 @@
                                 <div class="row">
                                     <div class="col-12 d-flex align-items-center">
                                         <h2>Boolean</h2>
-                                        <div>
+                                        <div class="ps-2">
                                             <button type="button" class="btn btn-primary rounded-pill" style="--bs-btn-padding-y: .1px; --bs-btn-padding-x: .3rem; --bs-btn-font-size: .75rem;">Piano blaze</button>
                                         </div>
                                     </div>
-                                    <div class="col-12 d-flex align-items-center">
-                                        <button type="button" class="btn btn-primary rounded-pill" style="--bs-btn-padding-y: .1px; --bs-btn-padding-x: .3rem; --bs-btn-font-size: .75rem;">3 app</button>
-                                        <a href="#">
+                                    <div class="col-12 d-flex align-items-center bottoni_boolean">
+                                        <button type="button" class=" btn btn-primary rounded-pill" style="--bs-btn-padding-y: .1px; --bs-btn-padding-x: .3rem; --bs-btn-font-size: .75rem;">3 app</button>
+                                        <a class="px-md-2 px-sm-2" href="#">
                                             <div>#</div>
                                         </a>
                                         <button type="button" class="d-lg-none btn btn-primary rounded-pill" style="--bs-btn-padding-y: .1px; --bs-btn-padding-x: .3rem; --bs-btn-font-size: .75rem;">+</button>
@@ -173,7 +173,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-4 col-lg-3 order-lg-3 order-md-3">
+                        <div class="col-sm-12 col-md-4 col-lg-3 order-lg-2 order-md-2">
                             <div class="d-flex flex-column">
                                 <div class="row">
                                     <div class="col-12 d-flex align-items-center">
