add todo section

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             <div class="col-12 prossime_classi">
                                 <div class="card">
                                     <div class="card-header ps-2">
-                                        <h3>Prossime classi</h3>
+                                        <div>Prossime classi</div>
                                     </div>
                                     <table class="table table-hover align-middle">
                                         <thead>
@@ -493,13 +493,46 @@
             <!-- right main section -->
 
 
-                        <section class="col-lg-4 col-sm-12 bg-black right_main_section">
+                        <section class="col-lg-4 col-sm-12 right_main_section pt-3">
 
 
             <!-- todo section -->
 
                             <div class="col-12 todo">
-                                ciao ciao
+                                <div class="card">
+                                    <div class="card-header">
+                                        Todo
+                                    </div>
+                                    <div class="card m-3">
+                                        <ul class="list-group list-group-flush">
+                                          <li class="list-group-item p-0">
+                                            <div class="input-group">
+                                                <div class="input-group-text bg-white border-0">
+                                                  <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
+                                                  <div class="ms-2">Kickoff nuove classi</div>
+                                                </div>
+                                            </div>
+                                          </li>
+                                          <li class="list-group-item p-0">
+                                            <div class="input-group">
+                                                <div class="input-group-text bg-white border-0">
+                                                  <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
+                                                  <div class="ms-2">Lezione su Bootstrap 5 in classe #75</div>
+                                                </div>
+                                            </div>
+                                          </li>
+                                          <li class="list-group-item p-0">
+                                            <div class="input-group">
+                                                <div class="input-group-text bg-white border-0">
+                                                  <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
+                                                  <div class="ms-2">Controllare username github studenti</div>
+                                                </div>
+                                            </div>
+                                          </li>
+                                        </ul>
+                                      </div>
+                                      
+                                </div>
                             </div>
                         
             <!-- graphics section -->
