--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
               </div>
               <div class="col-8">
                   <form role="search">
-                    <input class="form-control bg-secondary-subtle" type="search" placeholder="&telrec; Prova a cercare: Lezioni di Lavarel" aria-label="Search">
+                    <div class="input-group">
+                        <span class="input-group-text border-end-0 color_searchbar" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
+                        <input type="text" class="form-control border-start-0 color_searchbar" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Username" aria-describedby="basic-addon1">
+                    </div>
                   </form>
               </div>
               <div class="col-2 display_contents">
@@ -109,7 +112,7 @@
                                             <div class="modal-dialog modal-fullscreen-md-down">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
-                                                        <h1 class="modal-title fs-5" id="exampleModalLabel">New message to @getbootstrap</h1>
+                                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Inserisci un nuovo studente</h1>
                                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                                     </div>
                                                     <div class="modal-body">
