--- a/index.html
+++ b/index.html
@@ -120,15 +120,44 @@
                                                             <div class="container-fluid">
                                                                 <div class="row">
                                                                     <div class="col-6">
-                                                                        <div class="mb-3">
-                                                                            <label for="recipient-name" class="col-form-label">Recipient:</label>
+                                                                        <div class="mb-3">Nome</label>
                                                                             <input type="text" class="form-control" id="recipient-name">
                                                                         </div>
                                                                     </div>
                                                                     <div class="col-6">
-                                                                        <div class="mb-3">
-                                                                            <label for="message-text" class="col-form-label">Message:</label>
-                                                                            <textarea class="form-control" id="message-text"></textarea>
+                                                                        <div class="mb-3">Cognome</label>
+                                                                            <input type="text" class="form-control" id="recipient-name">
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="col-6">
+                                                                        <label for="email" class="form-label">Email</label>
+                                                                        <div class="input-group">
+                                                                            <span class="input-group-text" id="basic-addon1">@</span>
+                                                                            <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="col-6">
+                                                                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                                                                        <input type="password" class="form-control" id="exampleInputPassword1">
+                                                                    </div>
+                                                                    <div class="col-12">
+                                                                        <div class="mb-3">Indirizzo</label>
+                                                                            <input type="text" class="form-control" id="recipient-name">
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="col-6">
+                                                                        <div class="mb-3">Città</label>
+                                                                            <input type="text" class="form-control" id="recipient-name">
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="col-4">
+                                                                        <div class="mb-3">Stato</label>
+                                                                            <input type="text" placeholder="Scegli..." class="form-control" id="recipient-name">
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="col-2">
+                                                                        <div class="mb-3">CAP</label>
+                                                                            <input type="text" class="form-control" id="recipient-name">
                                                                         </div>
                                                                     </div>
 
