--- a/index.html
+++ b/index.html
@@ -160,14 +160,30 @@
                                                                             <input type="text" class="form-control" id="recipient-name">
                                                                         </div>
                                                                     </div>
+                                                                    <div class="col-12">
+                                                                        <label for="email" class="form-label">Foto</label>
+                                                                        <div class="input-group">
+                                                                            <span class="input-group-text" id="basic-addon1">Scegli file</span>
+                                                                            <input type="text" placeholder="Nessun file selezionato" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="col-12 mt-3">
+                                                                        <div class="form-check">
+                                                                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                                            <label class="form-check-label" for="flexCheckDefault">
+                                                                              Seleziona per proseguire
+                                                                            </label>
+                                                                          </div>
+                                                                    </div>
+                                
 
                                                                 </div>
                                                             </div>
                                                         </form>
                                                     </div>
-                                                    <div class="modal-footer">
-                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                        <button type="button" class="btn btn-primary">Send message</button>
+                                                    <div class="modal-footer justify-content-start">
+                                                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Salva</button>
+                                                        <button type="button" class="btn bg-warning">Svuota</button>
                                                     </div>
                                                 </div>
                                             </div>
