cancel border on modal

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="display: none;">
                                             <div class="modal-dialog modal-fullscreen-md-down">
                                                 <div class="modal-content">
-                                                    <div class="modal-header">
+                                                    <div class="modal-header border-0">
                                                         <h1 class="modal-title fs-5" id="exampleModalLabel">Inserisci un nuovo studente</h1>
                                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                                     </div>
@@ -181,7 +181,7 @@
                                                             </div>
                                                         </form>
                                                     </div>
-                                                    <div class="modal-footer justify-content-start">
+                                                    <div class="modal-footer border-0 justify-content-start">
                                                         <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Salva</button>
                                                         <button type="button" class="btn bg-warning">Svuota</button>
                                                     </div>
